# crr_dev

./: git status
Classes/Classes/: CMakeLists.txt  Source.cpp  miniphonedir.cpp  pseudo_code.txt
Classes/Classes/header/: contactdata.h  singleton.h
Classes/Classes/src/: contactdata.cpp  main.cpp  singleton.cpp
Matrices/: CMakeLists.txt
Matrices/Matrices_JC/: CMakeLists.txt  Matrix_Calcuator_Structured.cpp
Matrices/Ram/: CMakeLists.txt
Matrices/Ram/ext/matrixlib/: CMakeLists.txt
Matrices/Ram/ext/matrixlib/include/: matrix.h  matrix_factory.h  matrix_interface.h
Matrices/Ram/ext/matrixlib/src/: matrix.cpp
Matrices/Ram/include/: matrix.h  matrix_factory.h  matrix_interface.h
Matrices/Ram/src/: main.cpp  matrix.cpp  matrix_factory.cpp
Matrices/include/: matrix.h  matrix_factory.h
Matrices/src/: main.cpp  matrix.cpp  matrix_factory.cpp
MultiThreading/: CMakeLists.txt  thread_example.cpp
RPi/: dht_temp_hum_sensor.py
